name:                hhl
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/hhl#readme
license:             BSD3
license-file:        LICENSE
author:              Adam Wall
maintainer:          agcwall@gmail.com
copyright:           2017 Adam Wall
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hhl
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , connection
                     , http-client-tls
                     , bytestring
                     , base64-bytestring
                     , containers
                     , aeson
                     , lens-aeson
                     , text
  default-extensions:  OverloadedStrings